--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
 	
 	
 	<h2>Selective Publications &nbsp
-	<a href="publications.html"><strong>[Full List]</strong></a>
+	<a href="publications.html"><strong>[More]</strong></a>
 	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a></h2>
 	<table cellspacing="10">
 	<hr>
