--- a/publications.html
+++ b/publications.html
@@ -31,7 +31,7 @@ body {
 </head>
 
 <body>
-<h2>Full Publications &nbsp <a href="index.html">[Back]</a></h2>
+<h2>Previous Publications &nbsp <a href="index.html">[Back]</a></h2>
 	<hr/>
 	<table cellspacing="10">
 	<tbody>
