--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
 			<td>
 			<font size="3">Mitigating Intensity Bias in Shadow Detection via Feature Decomposition and Reweighting
 			<br>
-			<i>Lei Zhu, <b>Ke Xu</b>, Zhanghan Ke, Rynson Lau</i>
+			<i>Lei Zhu, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Zhanghan Ke, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2021
 			<br>
