--- a/publications.html
+++ b/publications.html
@@ -87,7 +87,7 @@ body {
 			<td>
 			<font size="3">Efficient Image Super Resolution Integration
 			<br>
-			<i><b>Ke Xu</b>*, Xin Wang, Xin Yang, Shengfeng He, Qiang Zhang, Baocai Yin, Xiaopeng Wei, Rynson Lau</i>
+			<i><b>Ke Xu</b>, Xin Wang, Xin Yang, Shengfeng He, Qiang Zhang, Baocai Yin, Xiaopeng Wei, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">The Visual Computer (Proc. CGI)</font></i></b>, June 2018
 			<br>
