--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 	<br>	
 	
 	
-	<h2>Selective Publications &nbsp
+	<h2>Selected Publications &nbsp
 	<a href="publications.html"><strong>[More]</strong></a>
 	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a></h2>
 	<table cellspacing="10">
