--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {
 	<td align="center">
 			<td align="center"><h2>Ke XU</h2>
 			<p><font size=+1>&#35768;  &#21487;</font></p>
-			<p><font size=+1>Research Assistant Professor @ <a href="https://dmcv.sjtu.edu.cn/">DMCV Lab</a></font></p>
+			<p><font size=+1>Research Assistant Professor </font></p>
 			<p><font size=+1>Shanghai Jiao Tong University </font></p>						
 			<p>Email: kkangwing at gmail dot com<br></p>
 			</td>			
@@ -49,7 +49,7 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works with the DMCV Lab of Shanghai Jiao Tong University. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research endeavors aim to design effective visual perceptual models, to align the camera system of AI agents with the capacity of the human visual system in the wild.</font></p>	
+	<p><font size="3">Ke XU currently works at Shanghai Jiao Tong University. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research endeavors aim to design effective visual perceptual models, to align the camera system of AI agents with the capacity of the human visual system in the wild.</font></p>	
 	<br>
 	
 	
