--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@ body {
 	<table cellspacing="10">
 	<hr>
 	<tbody>
+
+		<tr>
+			<td>
+			<font size="3">Intensity-Aware Single-Image Deraining with Semantic and Color Regularization
+			<br>
+			<i><b>Ke Xu</b> Xin Tian, Xin Yang, Baocai Yin, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
+			<br>
+			[<a href=''><b>Paper & Code coming soon</b></a>]
+			</td>			
+		</tr>
 		
 		<tr>
 			<td>
