--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
 			<td>
 			<font size="3">Intensity-Aware Single-Image Deraining with Semantic and Color Regularization
 			<br>
-			<i><b>Ke Xu</b> Xin Tian, Xin Yang, Baocai Yin, Rynson Lau</i>
+			<i><b>Ke Xu</b>, Xin Tian, Xin Yang, Baocai Yin, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
 			<br>
