--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Night-time Scene Parsing with a Large Real Dataset
+			<br>
+			<i>Xin Tan, <b>Ke Xu</b>, Ying Cao, Yiheng Zhang, Lizhuang Ma, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
+			<br>
+			[<a href=''><b>Paper & Code coming soon</b></a>]
+			</td>			
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Intensity-Aware Single-Image Deraining with Semantic and Color Regularization
 			<br>
 			<i><b>Ke Xu</b>, Xin Tian, Xin Yang, Baocai Yin, Rynson Lau</i>
