--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2021
 			<br>
-			[<a href=''><b>Paper & Code coming soon</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Dong_Location-Aware_Single_Image_Reflection_Removal_ICCV_2021_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/zdlarr/Location-aware-SIRR'><b>Project</b></a>]
 			</td>			
 		</tr>
 
