--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2021
 			<br>
-			[<a href=''><b>Paper & Code coming soon</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Zhu_Mitigating_Intensity_Bias_in_Shadow_Detection_via_Feature_Decomposition_and_ICCV_2021_paper.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
 			</td>			
 		</tr>
 		
