--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 	
 	<h2>Professional Service Highlights</h2>
 	<hr>
-	<p><font size="3">Program committee member/reviewer: CVPR, ICCV, NeurIPS, ICLR, ICML, IJCV.</font></p>
+	<p><font size="3">Program committee member/reviewer: CVPR, ICCV, NeurIPS, ICLR, ICML, IJCV, TIP, TMM.</font></p>
 	<p><font size="3">Best Student Paper Award Runner Up: BMVC 2020.</font></p>
 	<p><font size="3">Top Reviewer: NeurIPS 2019.</font></p>
 	<p><font size="3">Travel Award: NeurIPS 2018.</font></p>
