--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body {
 			<td>
 			<font size="3">Night-time Scene Parsing with a Large Real Dataset
 			<br>
-			<i>Xin Tan, <b>Ke Xu</b>, Ying Cao, Yiheng Zhang, Lizhuang Ma, Rynson Lau</i>
+			<i>Xin Tan, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Ying Cao, Yiheng Zhang, Lizhuang Ma, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
 			<br>
