--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
 			<br>
-			[<a href=''><b>Paper & Code coming soon</b></a>]
+			[<a href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9565368'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
 			</td>			
 		</tr>
 		
