--- a/index.html
+++ b/index.html
@@ -71,14 +71,26 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Learning to Detect Instance-level Salient Objects Using Complementary Image Labels
+			<br>
+			<i>Xin Tian*, <b>Ke Xu</b>*, Xin Yang, Baocai Yin, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">International Journal of Computer Vision</font></i></b>, 2021
+			<br>
+			[<a href=''><b>Paper & Code coming soon</b></a>]
+			</td>			
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Night-time Scene Parsing with a Large Real Dataset
 			<br>
 			<i>Xin Tan, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Ying Cao, Yiheng Zhang, Lizhuang Ma, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
 			<br>
-			[<a href=''><b>Paper & Code coming soon</b></a>]
-			</td>			
+			[<a href='https://arxiv.org/pdf/2003.06883.pdf'><b>Paper</b></a>|<a href='https://dmcv.sjtu.edu.cn/people/phd/tanxin/NightCity/index.html'><b>Project</b></a>]
+			</td>		
 		</tr>
 
 		<tr>
