--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ body {
 	<td align="center">
 			<td align="center"><h2>Ke XU</h2>
 			<p><font size=+1>&#35768;  &#21487;</font></p>
-			<p><font size=+1>Research Assistant Professor </font></p>
-			<p><font size=+1>Shanghai Jiao Tong University </font></p>						
+			<p><font size=+1>Postdoctoral Researcher </font></p>
+			<p><font size=+1>City University of Hong Kong </font></p>						
 			<p>Email: kkangwing at gmail dot com<br></p>
 			</td>			
 	</td>		
@@ -49,7 +49,7 @@ body {
 	
 	<h2>Biography</h2>
 	<hr/>
-	<p><font size="3">Ke XU currently works at Shanghai Jiao Tong University. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. His research endeavors aim to design effective visual perceptual models, to align the camera system of AI agents with the capacity of the human visual system in the wild.</font></p>	
+	<p><font size="3">Ke XU currently works at City University of Hong Kong. He has obtained the dual Ph.D. degrees from Dalian University of Technology and City University of Hong Kong in 2021. He aims to design effective visual perceptual models, to align the camera system of AI agents with the capacity of the human visual system in the wild.</font></p>	
 	<br>
 	
 	
@@ -77,7 +77,7 @@ body {
 			<br>
 			<b><i><font color="#770043">International Journal of Computer Vision</font></i></b>, 2021
 			<br>
-			[<a href=''><b>Paper & Code coming soon</b></a>]
+			[<a href='https://arxiv.org/pdf/2111.10137.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
 			</td>			
 		</tr>
 
@@ -113,7 +113,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2021
 			<br>
-			[<a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Zhu_Mitigating_Intensity_Bias_in_Shadow_Detection_via_Feature_Decomposition_and_ICCV_2021_paper.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Zhu_Mitigating_Intensity_Bias_in_Shadow_Detection_via_Feature_Decomposition_and_ICCV_2021_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/rayleizhu/FDRNet'><b>Code</b></a>]
 			</td>			
 		</tr>
 		
