--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Total Scale: Face-to-Body Detail Reconstruction from Sparse RGBD Sensors
+			<br>
+			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">arXiv preprint</font></i></b>, 2021
+			<br>
+			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Learning to Detect Instance-level Salient Objects Using Complementary Image Labels
 			<br>
 			<i>Xin Tian*, <b>Ke Xu</b>*, Xin Yang, Baocai Yin, Rynson Lau</i>
