--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
 			<br>
 			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">arXiv preprint</font></i></b>, 2021
+			<b><i><font color="#770043">ArXiv Preprint</font></i></b>, 2021
 			<br>
 			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>]
 			</td>
