--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2019
 			<br>
-			[<a href='https://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Spatial_Attentive_Single-Image_Deraining_With_a_High_Quality_Real_Rain_CVPR_2019_paper.pdf'><b>Paper</b></a>|<a href='https://stevewongv.github.io/derain-project.html'><b>Project</b></a>]
+			[<a href='https://openaccess.thecvf.com/content_CVPR_2019/papers/Wang_Spatial_Attentive_Single-Image_Deraining_With_a_High_Quality_Real_Rain_CVPR_2019_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/stevewongv/SPANet'><b>Code</b></a>|<a href='https://mycuhk-my.sharepoint.com/personal/1155152065_link_cuhk_edu_hk/_layouts/15/onedrive.aspx?id=%2Fpersonal%2F1155152065%5Flink%5Fcuhk%5Fedu%5Fhk%2FDocuments%2Fdataset%2Freal%5Fworld%5Frain%5Fdataset%5FCVPR19'><b>Dataset</b></a>]
 			</td>
 		</tr>	
 
