--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ body {
 	<br>	
 	
 	
-	<h2>Selected Publications &nbsp
-	<a href="publications.html"><strong>[More]</strong></a>
+	<h2>Recent Publications &nbsp
+	<a href="publications.html"><strong>[Previous]</strong></a>
 	<a href="https://scholar.google.com/citations?hl=en&user=2meBhbQAAAAJ"><strong>[Google Scholar]</strong></a></h2>
 	<table cellspacing="10">
 	<hr>
