--- a/index.html
+++ b/index.html
@@ -72,6 +72,42 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Bi-directional Object-context Prioritization Learning for Saliency Ranking
+			<br>
+			<i>Xin Tian, <b>Ke Xu</b>, Xin Yang, Lin Du, Baocai Yin, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
+			<br>
+			[<a href=''><b>Coming soon</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Rethinking Efficient Lane Detection via Curve Modeling
+			<br>
+			<i>Zhengyang Feng, Shaohua Guo, Xin Tan, <b>Ke Xu</b>, Min Wang, Lizhuang Ma</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
+			<br>
+			[<a href=''><b>Coming soon</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">ISDNet: Integrating Shallow and Deep Networks for Efficient Ultra-high Resolution Segmentation
+			<br>
+			<i>Shaohua Guo, Liang Liu, Zhenye Gan, Ran Yi, Yabiao Wang, Chengjie Wang, Wuhao Zhang, Guannan Jiang, Wei Zhang, Lizhuang Ma, <b>Ke Xu</b></i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
+			<br>
+			[<a href=''><b>Coming soon</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Learning to Detect Instance-level Salient Objects Using Complementary Image Labels
 			<br>
 			<i>Xin Tian*, <b>Ke Xu</b>*, Xin Yang, Baocai Yin, Rynson Lau</i>
