--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body {
 			<br>
 			<i>Xin Tian*, <b>Ke Xu</b>*, Xin Yang, Baocai Yin, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">International Journal of Computer Vision</font></i></b>, 2022
+			<b><i><font color="#770043">International Journal of Computer Vision (IJCV)</font></i></b>, 2022
 			<br>
 			[<a href='https://arxiv.org/pdf/2111.10137.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
 			</td>			
@@ -138,7 +138,7 @@ body {
 			<br>
 			<i>Xin Tan, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Ying Cao, Yiheng Zhang, Lizhuang Ma, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
+			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2021
 			<br>
 			[<a href='https://arxiv.org/pdf/2003.06883.pdf'><b>Paper</b></a>|<a href='https://dmcv.sjtu.edu.cn/people/phd/tanxin/NightCity/index.html'><b>Project</b></a>]
 			</td>		
@@ -150,7 +150,7 @@ body {
 			<br>
 			<i><b>Ke Xu</b>, Xin Tian, Xin Yang, Baocai Yin, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">IEEE Trans. on Image Processing</font></i></b>, 2021
+			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2021
 			<br>
 			[<a href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9565368'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
 			</td>			
