--- a/publications.html
+++ b/publications.html
@@ -101,7 +101,7 @@ body {
 			<br>
 			<i>Xin Yang, Haiyang Mei, Jiqing Zhang, <b>Ke Xu</b>, Baocai Yin, Qiang Zhang, Xiaopeng Wei</i>
 			<br>
-			<b><i><font color="#770043">IEEE Trans. on Multimedia</font></i></b>, 21(2): 328-337, 2018
+			<b><i><font color="#770043">IEEE Trans. on Multimedia (TMM)</font></i></b>, 2018
 			<br>
 			[<a href='https://arxiv.org/pdf/1908.08837.pdf'><b>Paper</b></a>|<a href='https://mhaiyang.github.io/TMM2018_DRFN/index.html'><b>Project</b></a>]
 			</td>			
