--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ body {
 			<td>
 			<font size="3">ISDNet: Integrating Shallow and Deep Networks for Efficient Ultra-high Resolution Segmentation
 			<br>
-			<i>Shaohua Guo, Liang Liu, Zhenye Gan, Ran Yi, Yabiao Wang, Chengjie Wang, Wuhao Zhang, </i>
+			<i>Shaohua Guo, Liang Liu, Zhenye Gan, Yabiao Wang, Wuhao Zhang, Chengjie Wang, </i>
 			<br>
-			<i>Guannan Jiang, Wei Zhang, Lizhuang Ma, <b>Ke Xu</b></i>
+			<i>Guannan Jiang, Wei Zhang, Ran Yi, Lizhuang Ma, <b>Ke Xu</b></i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
