--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
-			[<a href=''><b>Coming soon</b></a>]
+			[<a href='https://arxiv.org/pdf/2203.02431'><b>Paper</b></a>|<a href='https://github.com/voldemortX/pytorch-auto-drive'><b>Project</b></a>]
 			</td>
 		</tr>
 
