--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
-			[<a href=''><b>Coming soon</b></a>]
+			[<a href='https://arxiv.org/pdf/2203.09416'><b>Paper</b></a>|<a href='https://github.com/GrassBro/OCOR'><b>Code</b></a>]
 			</td>
 		</tr>
 
