--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Mirror Detection with the Visual Chirality Cue
+			<br>
+			<i>Xin Tan, Jiaying Lin, <b>Ke Xu</b>, Pan Chen, Lizhuang Ma, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2022
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Bi-directional Object-context Prioritization Learning for Saliency Ranking
 			<br>
 			<i>Xin Tian, <b>Ke Xu</b>, Xin Yang, Lin Du, Baocai Yin, Rynson Lau</i>
@@ -118,6 +130,18 @@ body {
 			<br>
 			[<a href='https://arxiv.org/pdf/2111.10137.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
 			</td>			
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">HSNet: Hierarchical Semantics Network for Scene Parsing
+			<br>
+			<i>Xin Tan, Jiachen Xu, Ying Cao, <b>Ke Xu</b>, Lizhuang Ma, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">The Visual Computer</font></i></b>, 2022
+			<br>
+			[<a href='https://link.springer.com/content/pdf/10.1007/s00371-022-02477-3.pdf'><b>Paper</b></a>]
+			</td>
 		</tr>
 
 		<tr>
