--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 			<td>
 			<font size="3">Mirror Detection with the Visual Chirality Cue
 			<br>
-			<i>Xin Tan, Jiaying Lin, <b>Ke Xu</b>, Pan Chen, Lizhuang Ma, Rynson Lau</i>
+			<i>Xin Tan, Jiaying Lin, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Pan Chen, Lizhuang Ma, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2022
 			<br>
@@ -86,7 +86,7 @@ body {
 			<td>
 			<font size="3">Bi-directional Object-context Prioritization Learning for Saliency Ranking
 			<br>
-			<i>Xin Tian, <b>Ke Xu</b>, Xin Yang, Lin Du, Baocai Yin, Rynson Lau</i>
+			<i>Xin Tian, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Xin Yang, Lin Du, Baocai Yin, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
@@ -98,7 +98,7 @@ body {
 			<td>
 			<font size="3">Rethinking Efficient Lane Detection via Curve Modeling
 			<br>
-			<i>Zhengyang Feng, Shaohua Guo, Xin Tan, <b>Ke Xu</b>, Min Wang, Lizhuang Ma</i>
+			<i>Zhengyang Feng, Shaohua Guo, Xin Tan, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Min Wang, Lizhuang Ma</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
