--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
-			[<a href=''><b>Coming soon</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2022/papers/Guo_ISDNet_Integrating_Shallow_and_Deep_Networks_for_Efficient_Ultra-High_Resolution_CVPR_2022_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/cedricgsh/ISDNet'><b>Code</b></a>]
 			</td>
 		</tr>
 
