--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 	
 	<h2>Professional Service Highlights</h2>
 	<hr>
-	<p><font size="3">Program Committee Member/Reviewer: CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, AAAI, BMVC, WACV, ACCV.</font></p>
+	<p><font size="3">Program Committee Member/Reviewer: CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, AAAI.</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TIP, TMM, TCSVT, TOMM.</font></p>
 	<p><font size="3">Best Student Paper Award Runner Up: BMVC 2020.</font></p>
 	<p><font size="3">Top Reviewer: NeurIPS 2019.</font></p>
