--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Frequency-aware Camouflaged Object Detection
+			<br>
+			<i>Jiaying Lin, Xin Tan, <b>Ke Xu</b>, Lizhuang Ma, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2022
+			<br>
+			[<a href=''><b>Paper Comming Soon</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">HSNet: Hierarchical Semantics Network for Scene Parsing
 			<br>
 			<i>Xin Tan, Jiachen Xu, Ying Cao, <b>Ke Xu</b>, Lizhuang Ma, Rynson Lau</i>
