--- a/index.html
+++ b/index.html
@@ -70,6 +70,32 @@ body {
 	<hr>
 	<tbody>
 
+
+		<tr>
+			<td>
+			<font size="3">Local Color Distributions Prior for Image Enhancement
+			<br>
+			<i>Haoyuan Wang, <b>Ke Xu</b>, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. ECCV</font></i></b>, 2022
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Harmonizer: Learning to Perform White-Box Image and Video Harmonization
+			<br>
+			<i>Zhanghan Ke, Chunyi Sun, Lei Zhu, <b>Ke Xu</b>, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. ECCV</font></i></b>, 2022
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href='https://github.com/ZHKKKe/Harmonizer'><b>Code</b></a>|<a href='https://www.youtube.com/watch?v=kKKK3D1f_Mc&ab_channel=ZhanghanKe'><b>Youtube Demo 1</b></a>|<a href='https://www.youtube.com/watch?v=NS8f-eJY9cc&ab_channel=ZhanghanKe'><b>Demo 2</b></a>]
+			</td>
+		</tr>
+
+
 		<tr>
 			<td>
 			<font size="3">Mirror Detection with the Visual Chirality Cue
