--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. ECCV</font></i></b>, 2022
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href='https://github.com/ZHKKKe/Harmonizer'><b>Code</b></a>|<a href='https://www.youtube.com/watch?v=kKKK3D1f_Mc&ab_channel=ZhanghanKe'><b>Youtube Demo 1</b></a>|<a href='https://www.youtube.com/watch?v=NS8f-eJY9cc&ab_channel=ZhanghanKe'><b>Demo 2</b></a>]
+			[<a href='https://arxiv.org/pdf/2207.01322.pdf'><b>Paper</b></a>|<a href='https://github.com/ZHKKKe/Harmonizer'><b>Code</b></a>|<a href='https://www.youtube.com/watch?v=kKKK3D1f_Mc&ab_channel=ZhanghanKe'><b>Youtube Demo 1</b></a>|<a href='https://www.youtube.com/watch?v=NS8f-eJY9cc&ab_channel=ZhanghanKe'><b>Demo 2</b></a>]
 			</td>
 		</tr>
 
