--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
 			<td>
 			<font size="3">Local Color Distributions Prior for Image Enhancement
 			<br>
-			<i>Haoyuan Wang, <b>Ke Xu</b>, Rynson Lau</i>
+			<i>Haoyuan Wang, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. ECCV</font></i></b>, Oct. 2022
 			<br>
