--- a/index.html
+++ b/index.html
@@ -73,6 +73,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Weakly-Supervised Salient Object Detection on Light Fields
+			<br>
+			<i>Zijian Liang, Pengjie Wang, <b>Ke Xu</b>, Hongxu Zhao, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2022
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Harmonizer: Learning to Perform White-Box Image and Video Harmonization
 			<br>
 			<i>Zhanghan Ke, Chunyi Sun, Lei Zhu, <b>Ke Xu</b>, Rynson Lau</i>
@@ -153,7 +165,7 @@ body {
 			<br>
 			<b><i><font color="#770043">International Journal of Computer Vision (IJCV)</font></i></b>, 2022
 			<br>
-			[<a href='https://arxiv.org/pdf/2111.10137.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
+			[<a href='https://arxiv.org/pdf/2111.10137.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>			
 		</tr>
 
@@ -213,7 +225,7 @@ body {
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2021
 			<br>
-			[<a href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9565368'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
+			[<a href='https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=9565368'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>			
 		</tr>
 		
@@ -249,7 +261,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. BMVC (Oral)</font></i></b>, Sept. 2020
 			<br>
-			[<a href='https://arxiv.org/pdf/2009.13898.pdf'><b>Paper</b></a>|<a href=''><b>Code coming soon</b></a>]
+			[<a href='https://arxiv.org/pdf/2009.13898.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>			
 		</tr>
 
