--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@ body {
 	<hr>
 	<tbody>
 
+		<tr>
+			<td>
+			<font size="3">Geometry-aware Two-scale PIFu Representation for Human Reconstruction
+			<br>
+			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Nov. 2022
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
 
 		<tr>
 			<td>
@@ -190,18 +201,6 @@ body {
 			<b><i><font color="#770043">The Visual Computer</font></i></b>, 2022
 			<br>
 			[<a href='https://link.springer.com/content/pdf/10.1007/s00371-022-02477-3.pdf'><b>Paper</b></a>]
-			</td>
-		</tr>
-
-		<tr>
-			<td>
-			<font size="3">Total Scale: Face-to-Body Detail Reconstruction from Sparse RGBD Sensors
-			<br>
-			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
-			<br>
-			<b><i><font color="#770043">Arxiv Preprint</font></i></b>, 2021
-			<br>
-			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
