--- a/index.html
+++ b/index.html
@@ -194,6 +194,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Mirror Segmentation via Semantic-Aware Contextual Contrasted Feature Learning
+			<br>
+			<i>Haiyang Mei, Letian Yu, <b>Ke Xu</b>, Yang Wang, Xin Yang, Xiaopeng Wei, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2022
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">HSNet: Hierarchical Semantics Network for Scene Parsing
 			<br>
 			<i>Xin Tan, Jiachen Xu, Ying Cao, <b>Ke Xu</b>, Lizhuang Ma, Rynson Lau</i>
