--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Nov. 2022
 			<br>
-			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]]
+			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
 		</tr>
 
