--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body {
 			<td>
 			<font size="3">Weakly-Supervised Salient Object Detection on Light Fields
 			<br>
-			<i>Zijian Liang, Pengjie Wang, <b>Ke Xu</b>, Hongxu Zhao, Rynson Lau</i>
+			<i>Zijian Liang, Pengjie Wang, <b>Ke Xu</b>, Pingping Zhang, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2022
 			<br>
