--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 	
 	<h2>Professional Service Highlights</h2>
 	<hr>
-	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, AAAI.</font></p>
+	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, AAAI, BMVC.</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP.</font></p>
 	<p><font size="3">Best Student Paper Award Runner Up: BMVC 2020.</font></p>
 	<p><font size="3">Top Reviewer: NeurIPS 2019.</font></p>
@@ -79,6 +79,18 @@ body {
 			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Nov. 2022
 			<br>
 			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Semantics-Adding Flaw-Erasing Network for Semantic Human Matting
+			<br>
+			<i>Jiayu Sun, Zhanghan Ke, <b>Ke Xu</b>, Guofeng Zhang, Lihe Zhang, Huchuan Lu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. BMVC</font></i></b>, Nov. 2022
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
 		</tr>
 
