--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
 			<br>
 			<i>Jiayu Sun, Zhanghan Ke, <b>Ke Xu</b>, Guofeng Zhang, Lihe Zhang, Huchuan Lu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. BMVC</font></i></b>, Nov. 2022
+			<b><i><font color="#770043">Proc. BMVC (Oral)</font></i></b>, Nov. 2022
 			<br>
 			[<a href=''><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
