--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
-			[<a href='https://arxiv.org/pdf/2203.09416'><b>Paper</b></a>|<a href='https://github.com/GrassBro/OCOR'><b>Code</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2022/papers/Tian_Bi-Directional_Object-Context_Prioritization_Learning_for_Saliency_Ranking_CVPR_2022_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/GrassBro/OCOR'><b>Code</b></a>]
 			</td>
 		</tr>
 
@@ -162,7 +162,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2022
 			<br>
-			[<a href='https://arxiv.org/pdf/2203.02431'><b>Paper</b></a>|<a href='https://github.com/voldemortX/pytorch-auto-drive'><b>Project</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/CVPR2022/papers/Feng_Rethinking_Efficient_Lane_Detection_via_Curve_Modeling_CVPR_2022_paper.pdf'><b>Paper</b></a>|<a href='https://github.com/voldemortX/pytorch-auto-drive'><b>Project</b></a>]
 			</td>
 		</tr>
 
