--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ body {
 			<br>
 			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. NeurIPS</font></i></b>, Nov. 2022
+			<b><i><font color="#770043">Proc. NeurIPS (Spotlight)</font></i></b>, Nov. 2022
 			<br>
 			[<a href='https://arxiv.org/pdf/2112.02082.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>
