--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
 	
 	<h2>Professional Service Highlights</h2>
 	<hr>
-	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICML, ICLR, BMVC.</font></p>
+	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR, BMVC.</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP.</font></p>
 	<p><font size="3">Best Student Paper Award Runner Up: BMVC 2020.</font></p>
 	<p><font size="3">Top Reviewer: NeurIPS 2019.</font></p>
