--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ body {
 			<td>
 			<font size="3">Frequency-aware Camouflaged Object Detection
 			<br>
-			<i>Jiaying Lin, Xin Tan, <b>Ke Xu</b>, Lizhuang Ma, Rynson Lau</i>
+			<i>Jiaying Lin, Xin Tan, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Lizhuang Ma, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2022
 			<br>
@@ -208,11 +208,11 @@ body {
 			<td>
 			<font size="3">Mirror Segmentation via Semantic-Aware Contextual Contrasted Feature Learning
 			<br>
-			<i>Haiyang Mei, Letian Yu, <b>Ke Xu</b>, Yang Wang, Xin Yang, Xiaopeng Wei, Rynson Lau</i>
+			<i>Haiyang Mei, Letian Yu, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Yang Wang, Xin Yang, Xiaopeng Wei, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2022
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://dl.acm.org/doi/pdf/10.1145/3566127'><b>Paper</b></a>]
 			</td>
 		</tr>
 
