--- a/index.html
+++ b/index.html
@@ -72,6 +72,55 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Camouflaged Object Segmentation with Omni Perception
+			<br>
+			<i>Haiyang Mei, <b>Ke Xu</b>, Yunduo Zhou, Yang Wang, Haiyin Piao, Xiaopeng Wei, Xin Yang</i>
+			<br>
+			<b><i><font color="#770043">International Journal of Computer Vision (IJCV)</font></i></b>, 2023
+			<br>
+			[<a href=''><b>Paper</b></a>|<a href='https://mhaiyang.github.io/IJCV2023-OPNet/index.html'><b>Project</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Boosting Night-time Scene Parsing with Learnable Frequency
+			<br>
+			<i>Zhifeng Xie, Sen Wang, <b>Ke Xu</b>, Zhizhong Zhang, Xin Tan, Yuan Xie, Lizhuang Ma</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2023
+			<br>
+			[<a href='https://arxiv.org/pdf/2208.14241.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
+			</td>
+		</tr>
+
+
+		<tr>
+			<td>
+			<font size="3">MAKE: Product Retrieval with Vision-Language Pre-training in Taobao Search
+			<br>
+			<i>Xiaoyang Zheng, Zilong Wang, Sen Li, <b>Ke Xu</b>, Tao Zhuang, Qingwen Liu, Xiaoyi Zeng</i>
+			<br>
+			<b><i><font color="#770043">Proc. The Web Conference (WWW Industry Track)</font></i></b>, 2023
+			<br>
+			[<a href='https://arxiv.org/pdf/2301.12646.pdf'><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">A Geometrical Approach to Evaluate the Adversarial Robustness of Deep Neural Networks
+			<br>
+			<i>Yang Wang, Bo Dong, <b>Ke Xu</b>, Haiyin Piao, Yufei Ding, Baocai Yin, Xin Yang</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2023
+			<br>
+			[<a href='https://dl.acm.org/doi/pdf/10.1145/3587936?casa_token=ZHny3A4GI-IAAAAA:ZMoJ2C3yG_UwM0KHFdebmht0XNRg4lsek1quidC20Doxed_gECqpSc8WGXQHNvi0js2hHrYhPsFRHg'><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Geometry-aware Two-scale PIFu Representation for Human Reconstruction
 			<br>
 			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
@@ -138,7 +187,7 @@ body {
 			<br>
 			<b><i><font color="#770043">IEEE Trans. on Pattern Analysis and Machine Intelligence (TPAMI)</font></i></b>, 2022
 			<br>
-			[<a href='https://ieeexplore.ieee.org/document/9793716'><b>Paper</b></a>]
+			[<a href='https://ieeexplore.ieee.org/document/9793716'><b>Paper</b></a>|<a href='https://drive.google.com/drive/folders/1CsMkVZcuAC4aTwcXNxe7SJGzOcVP9iOx?usp=share_link'><b>Code</b></a>]
 			</td>
 		</tr>
 
