--- a/index.html
+++ b/index.html
@@ -70,6 +70,55 @@ body {
 	<hr>
 	<tbody>
 
+
+		<tr>
+			<td>
+			<font size="3">Lighting up NeRF via Unsupervised Decomposition and Enhancement
+			<br>
+			<i> Haoyuan Wang, Xiaogang Xu, <b>Ke Xu</b>, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Adaptive Illumination Mapping for Shadow Detection
+			<br>
+			<i> Jiayu Sun*, <b>Ke Xu</b>*, Lihe Zhang, Huchuan Lu, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Learning Image Harmonization in the Linear Color Space
+			<br>
+			<i> <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Referring Image Segmentation Using Text Supervision
+			<br>
+			<i> Fang Liu, Yuhao Liu, Yuqiu Kong, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Lihe Zhang, Baocai Yin, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
 		<tr>
 			<td>
 			<font size="3">Camouflaged Object Segmentation with Omni Perception
@@ -99,7 +148,7 @@ body {
 			<td>
 			<font size="3">MAKE: Product Retrieval with Vision-Language Pre-training in Taobao Search
 			<br>
-			<i>Xiaoyang Zheng, Zilong Wang, Sen Li, <b>Ke Xu</b>, Tao Zhuang, Qingwen Liu, Xiaoyi Zeng</i>
+			<i>Xiaoyang Zheng, Zilong Wang, Sen Li, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Tao Zhuang, Qingwen Liu, Xiaoyi Zeng</i>
 			<br>
 			<b><i><font color="#770043">Proc. The Web Conference (WWW Industry Track)</font></i></b>, 2023
 			<br>
