--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body {
 			<td>
 			<font size="3">Referring Image Segmentation Using Text Supervision
 			<br>
-			<i> Fang Liu, Yuhao Liu, Yuqiu Kong, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Lihe Zhang, Baocai Yin, Gerhard Hancke, Rynson Lau</i>
+			<i> Fang Liu, Yuhao Liu, Yuqiu Kong, <b>Ke Xu</b>, Lihe Zhang, Baocai Yin, Gerhard Hancke, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
