--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body {
 			<td>
 			<font size="3">Adaptive Illumination Mapping for Shadow Detection
 			<br>
-			<i> Jiayu Sun*, <b>Ke Xu</b>*, Lihe Zhang, Huchuan Lu, Gerhard Hancke, Rynson Lau</i>
+			<i> Jiayu Sun*, <b>Ke Xu</b>*, Youwei Pang, Lihe Zhang, Huchuan Lu, Gerhard Hancke, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
