--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">SAILOR: Synergizing Radiance and Occupancy Fields for Live Human Performance Capture
+			<br>
+			<i> Zheng Dong, <b>Ke Xu</b>, Yaoan Gao, Qilin Sun, Hujun Bao, Weiwei Xu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, conditionally accepted, Dec. 2023
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+
+		<tr>
+			<td>
 			<font size="3">Lighting up NeRF via Unsupervised Decomposition and Enhancement
 			<br>
 			<i> Haoyuan Wang, Xiaogang Xu, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Rynson Lau</i>
