--- a/index.html
+++ b/index.html
@@ -146,6 +146,18 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Structure-Informed Shadow Removal Networks
+			<br>
+			<i>Yuhao Liu, Qing Guo, Lan Fu, Zhanghan Ke, <b>Ke Xu</b>, Wei Feng, Ivor Tsang, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">IEEE Trans. on Image Processing (TIP)</font></i></b>, 2023
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Boosting Night-time Scene Parsing with Learnable Frequency
 			<br>
 			<i>Zhifeng Xie, Sen Wang, <b>Ke Xu</b>, Zhizhong Zhang, Xin Tan, Yuan Xie, Lizhuang Ma</i>
