--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
 			<br>
 			<i> Zheng Dong, <b>Ke Xu</b>, Yaoan Gao, Qilin Sun, Hujun Bao, Weiwei Xu, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, conditionally accepted, Dec. 2023
+			<b><i><font color="#770043">ACM Trans. on Graphics (Proc. ACM SIGGRAPH Asia)</font></i></b>, Dec. 2023
 			<br>
 			[<a href=''><b>Paper</b></a>]
 			</td>
@@ -92,19 +92,19 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Wang_Lighting_up_NeRF_via_Unsupervised_Decomposition_and_Enhancement_ICCV_2023_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
 		<tr>
 			<td>
-			<font size="3">Adaptive Illumination Mapping for Shadow Detection
+			<font size="3">Adaptive Illumination Mapping for Shadow Detection in Raw Images
 			<br>
 			<i> Jiayu Sun*, <b>Ke Xu</b>*, Youwei Pang, Lihe Zhang, Huchuan Lu, Gerhard Hancke, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Sun_Adaptive_Illumination_Mapping_for_Shadow_Detection_in_Raw_Images_ICCV_2023_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -116,7 +116,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Xu_Learning_Image_Harmonization_in_the_Linear_Color_Space_ICCV_2023_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -128,7 +128,7 @@ body {
 			<br>
 			<b><i><font color="#770043">Proc. IEEE ICCV</font></i></b>, Oct. 2023
 			<br>
-			[<a href=''><b>Paper</b></a>]
+			[<a href='https://openaccess.thecvf.com/content/ICCV2023/papers/Liu_Referring_Image_Segmentation_Using_Text_Supervision_ICCV_2023_paper.pdf'><b>Paper</b></a>]
 			</td>
 		</tr>
 
@@ -140,7 +140,7 @@ body {
 			<br>
 			<b><i><font color="#770043">International Journal of Computer Vision (IJCV)</font></i></b>, 2023
 			<br>
-			[<a href=''><b>Paper</b></a>|<a href='https://mhaiyang.github.io/IJCV2023-OPNet/index.html'><b>Project</b></a>]
+			[<a href='https://link.springer.com/article/10.1007/s11263-023-01838-2'><b>Paper</b></a>]
 			</td>
 		</tr>
 
