--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body {
 	<br>
 	
 	
-	<h2>Professional Service Highlights</h2>
+	<h2>Service</h2>
 	<hr>
 	<p><font size="3">Program Committee Member: CVPR, ICCV, ECCV, NeurIPS, ICLR.</font></p>
 	<p><font size="3">Journal Reviewer: IJCV, TPAMI, TIP.</font></p>
@@ -183,18 +183,6 @@ body {
 
 		<tr>
 			<td>
-			<font size="3">A Geometrical Approach to Evaluate the Adversarial Robustness of Deep Neural Networks
-			<br>
-			<i>Yang Wang, Bo Dong, <b>Ke Xu</b>, Haiyin Piao, Yufei Ding, Baocai Yin, Xin Yang</i>
-			<br>
-			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2023
-			<br>
-			[<a href='https://dl.acm.org/doi/pdf/10.1145/3587936?casa_token=ZHny3A4GI-IAAAAA:ZMoJ2C3yG_UwM0KHFdebmht0XNRg4lsek1quidC20Doxed_gECqpSc8WGXQHNvi0js2hHrYhPsFRHg'><b>Paper</b></a>]
-			</td>
-		</tr>
-
-		<tr>
-			<td>
 			<font size="3">Geometry-aware Two-scale PIFu Representation for Human Reconstruction
 			<br>
 			<i>Zheng Dong, <b>Ke Xu</b>, Ziheng Duan, Hujun Bao, Weiwei Xu, Rynson Lau</i>
@@ -313,42 +301,6 @@ body {
 			<br>
 			[<a href='https://arxiv.org/pdf/2111.10137.pdf'><b>Paper</b></a>|<a href=''><b>Code</b></a>]
 			</td>			
-		</tr>
-
-		<tr>
-			<td>
-			<font size="3">Frequency-aware Camouflaged Object Detection
-			<br>
-			<i>Jiaying Lin, Xin Tan, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Lizhuang Ma, Rynson Lau</i>
-			<br>
-			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2022
-			<br>
-			[<a href='https://dl.acm.org/doi/pdf/10.1145/3545609'><b>Paper</b></a>]
-			</td>
-		</tr>
-
-		<tr>
-			<td>
-			<font size="3">Mirror Segmentation via Semantic-Aware Contextual Contrasted Feature Learning
-			<br>
-			<i>Haiyang Mei, Letian Yu, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Yang Wang, Xin Yang, Xiaopeng Wei, Rynson Lau</i>
-			<br>
-			<b><i><font color="#770043">ACM Trans. on Multimedia Computing, Communications and Applications (TOMM)</font></i></b>, 2022
-			<br>
-			[<a href='https://dl.acm.org/doi/pdf/10.1145/3566127'><b>Paper</b></a>]
-			</td>
-		</tr>
-
-		<tr>
-			<td>
-			<font size="3">HSNet: Hierarchical Semantics Network for Scene Parsing
-			<br>
-			<i>Xin Tan, Jiachen Xu, Ying Cao, <b>Ke Xu</b>, Lizhuang Ma, Rynson Lau</i>
-			<br>
-			<b><i><font color="#770043">The Visual Computer</font></i></b>, 2022
-			<br>
-			[<a href='https://link.springer.com/content/pdf/10.1007/s00371-022-02477-3.pdf'><b>Paper</b></a>]
-			</td>
 		</tr>
 
 		<tr>
