--- a/index.html
+++ b/index.html
@@ -73,6 +73,43 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Recasting Regional Lighting for Shadow Removal
+			<br>
+			<i> Yuhao Liu, Zhanghan Ke, <b>Ke Xu</b>, Fang Liu, Zhenwei Wang, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Multi-view Reflection Dynamics for Video Glass Surface Detection
+			<br>
+			<i> Fang Liu, Yuhao Liu, Jiaying Lin, <b>Ke Xu</b>, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">ZOOM: Learning Video Mirror Detection With Extremely-Weak Supervision
+			<br>
+			<i> <b>Ke Xu</b>, Tsun-Wai Siu, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+
+		<tr>
+			<td>
 			<font size="3">SAILOR: Synergizing Radiance and Occupancy Fields for Live Human Performance Capture
 			<br>
 			<i> Zheng Dong, <b>Ke Xu</b>, Yaoan Gao, Qilin Sun, Hujun Bao, Weiwei Xu, Rynson Lau</i>
