--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body {
 			<td>
 			<font size="3">ZOOM: Learning Video Mirror Detection With Extremely-Weak Supervision
 			<br>
-			<i> <b>Ke Xu</b>, Tsun-Wai Siu, Rynson Lau</i>
+			<i> <b>Ke Xu</b>, Tsun Wai Siu, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
 			<br>
