--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body {
 			<td>
 			<font size="3">Recasting Regional Lighting for Shadow Removal
 			<br>
-			<i> Yuhao Liu, Zhanghan Ke, <b>Ke Xu</b>, Fang Liu, Zhenwei Wang, Rynson Lau</i>
+			<i> Yuhao Liu, Zhanghan Ke, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Fang Liu, Zhenwei Wang, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
 			<br>
@@ -87,7 +87,7 @@ body {
 			<td>
 			<font size="3">Multi-view Reflection Dynamics for Video Glass Surface Detection
 			<br>
-			<i> Fang Liu, Yuhao Liu, Jiaying Lin, <b>Ke Xu</b>, Rynson Lau</i>
+			<i> Fang Liu, Yuhao Liu, Jiaying Lin, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Rynson Lau</i>
 			<br>
 			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
 			<br>
