--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
 			<br>
 			<i> Yuhao Liu, Zhanghan Ke, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Fang Liu, Zhenwei Wang, Rynson Lau</i>
 			<br>
-			<b><i><font color="#770043">Proc. AAAI</font></i></b>, Feb. 2024
+			<b><i><font color="#770043">Proc. AAAI (Oral)</font></i></b>, Feb. 2024
 			<br>
 			[<a href=''><b>Paper</b></a>]
 			</td>
