--- a/index.html
+++ b/index.html
@@ -73,6 +73,42 @@ body {
 
 		<tr>
 			<td>
+			<font size="3">Unsupervised Salient Instance Detection
+			<br>
+			<i>  Xin Tian, <b>Ke Xu</b>, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Color Shift Estimation-and-Correction for Image Enhancement
+			<br>
+			<i>  Yiyu Li, <b>Ke Xu</b>, Gerhard Hancke, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
+			<font size="3">Effective Video Mirror Detection with Inconsistent Motion Cues
+			<br>
+			<i>  Alex Warren, <b>Ke Xu</b>, Jiaying Lin, Garry Tam, Rynson Lau</i>
+			<br>
+			<b><i><font color="#770043">Proc. IEEE CVPR</font></i></b>, June 2024
+			<br>
+			[<a href=''><b>Paper</b></a>]
+			</td>
+		</tr>
+
+		<tr>
+			<td>
 			<font size="3">Recasting Regional Lighting for Shadow Removal
 			<br>
 			<i> Yuhao Liu, Zhanghan Ke, <b>Ke Xu</b><span lang="EN-US" style="mso-bidi-font-size:8pt;font-family:Wingdings;mso-ascii-font-family:'Times New Roman';mso-hansi-font-family:'Times New Roman';color:black;mso-char-type:symbol;mso-symbol-font-family:Wingdings">*</span>, Fang Liu, Zhenwei Wang, Rynson Lau</i>
